[package]
name = "ssl-injector"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
ssl-injector-common = { path = "../ssl-injector-common", features = ["user"] }
anyhow = "1"
libc = "0.2"
log = "0.4"
log4rs = { version = "1.2.0", features = ["gzip"] }
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "ssl-injector"
path = "src/main.rs"
